css/style.css
/* RESET */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* COMMON */
html {
    font-family: 'Montserrat', sans-serif;
    font-size: 100%;
}

ul {
    list-style: none;
}

a {
    display: inline-block;
    text-decoration: none;
    color: inherit;
}

.general-container {
    min-width: 520px;
}

/* UTILITY */
.clearfix::after {
    content: "";
    display: table;
    clear: both;
}

.float-l {
    float: left;
}

 /* MAIN */
.main {
    width: 100%;
    height: calc(100vh - 80px);
    background-color: green;
    overflow: hidden;
}

/* SIDEBAR-MENU */
.sidebar {
    width: 200px;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: #000000;
    color: #a3a3a3;
    font-size: .8rem;
}

.sidebar a:hover {
    color: white;
}

.sidebar li:not(.logo-container) a img,
.sidebar .menu-footer a img {
    opacity: .5;
}

.sidebar li:not(.logo-container) a:hover img,
.sidebar .menu-footer a:hover img {
    opacity: 1;
}

.sidebar ul {
    width: 80%;
    margin: 1rem auto 0 auto;
}

.sidebar ul li {
    margin-bottom: 1rem;
}

.sidebar ul:first-child li:not(.logo-container) img {
    width: 25px;
    vertical-align: middle;
}

.sidebar ul:first-child li:not(.logo-container) span {
    vertical-align: middle;
}

.sidebar ul:first-child li:nth-child(2) {
    position: relative;
}

.sidebar ul:first-child li:nth-child(2)::before {
    content: "";
    position: absolute;
    top: -3px;
    left: -20px;
    width: 2px;
    height: calc(100% + 6px);
    background-color: greenyellow;
}

.sidebar .menu-list {
    height: calc(100% - 100px);
    min-height: 200px;
    overflow: hidden;
}

.sidebar .menu-list ul:first-child {
    height: 170px;
}

.sidebar .menu-list li.logo-container {
    margin-bottom: 1.5rem;
}

.sidebar .menu-list img {
    width: 80%;
}

.sidebar .playlist {
    height: calc(100% - 200px);
}

.sidebar .playlist .title,
.sidebar .playlist .icons-container {
    width: 80%;
    margin: 1rem auto 0 auto;
}

.sidebar .playlist .title h3 {
    color: white;
}

.sidebar .playlist i {
    padding: .5rem;
    color: black;
    background-color: #a3a3a3;
}

.sidebar .playlist a:hover i {
    color: white;
}

.sidebar .playlist ul {
    height: 100%;
    overflow-y: auto;
}

.sidebar .menu-footer {
    width: 80%;
    height: 100px;
    margin: 0 auto;
}

.menu-footer .container {
    font-size: .7rem;
    padding: 1rem 0;
    border-bottom: 2px solid gray;
}

.menu-footer .container a img {
    width: 15px;
    vertical-align: middle;
}

.menu-footer .container a span {
    vertical-align: middle;
}

.menu-footer .account {
    font-size: 1rem;
    font-weight: 700;
    padding: .7rem 0;
}

.menu-footer .account a {
    padding: 1px;
    background-color: rgba(128, 128, 128, 0.7);
    border-radius: 50%;
    overflow: hidden;
    vertical-align: middle;
}

.menu-footer .account a img {
    width: 25px;
    height: 25px;
}

.menu-footer .account span {
    color: white;
    vertical-align: middle;
}

/* MAIN-CONTENT */
.main .main-content {
    width: calc(100% - 200px);
    height: 100%;
    padding-top: 80px;
    background-color: #141922;
    color: #a3a3a3;
    overflow: auto;
}

.title h2,
.title p {
    color: white;
    margin-bottom: 1.5rem;
    margin-left: 1.3rem;
}

.main .main-content .title p {
    font-weight: 700;
    color: #a3a3a3;
}
/* MAIN-HEADER */
.main .main-header {
    position: fixed;
    top: 0;
    left: 200px;
    width: calc(100% - 200px);
    height: 80px;
    background-color: rgba(0, 0, 0, 0.5);
    text-align: right;
    line-height: 80px;
}

.main .main-header a {
    line-height: normal;
    margin-right: 1.2rem;
    padding: .8rem 2.5rem;
    border: 1px solid white;
    border-radius: 50px;
    color: white;
    font-weight: 600;
    transition: all .2s linear;
}

.main .main-header a:hover {
    transform: scale(1.1);
}

/* CARDS-CONTAINER */
.main-content .cards-container .menu {
    padding: 1rem 0;
    text-align: center;
}

.cards-container .menu ul li {
    position: relative;
    display: inline-block;
    margin-right: 1rem;
    font-size: .8rem;
    font-weight: 700;
}

.cards-container .menu ul li:first-child::before {
    content: "";
    position: absolute;
    bottom: -30%;
    left: 35%;
    width: 30%;
    height: 2px;
    background-color: greenyellow;
}

.cards-container .menu a:hover {
    color: white;
}

.cards-container .row {
    display: flex;
    padding: 0 1.3rem;
    margin-bottom: 3rem;
}

.cards-container > .title:not(:nth-child(2)) h2 {
    margin-bottom: .5rem;
}

.cards-container .card {
    width: 12vw;
    text-align: center;
    margin-right: .5rem;
}

.cards-container .card:last-child {
    margin-right: 0;
}

.card .img-container {
    height: 12vw;
    position: relative;
    margin-bottom: 1rem;
}

.card .img-container img {
    width: 100%;
    height: 100%;
}

.card .img-container.radius {
    border-radius: 50%;
    overflow: hidden;
}

.card .img-container .overlay {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.4);
    line-height: 12vw;
    font-size: 3rem;
}

.card .img-container .overlay i {
    color: white;
}

.card .img-container:hover .overlay {
    display: inline-block;
}

.card .title {
    font-size: .8rem;
    font-weight: 700;
    color: white;
    margin-bottom: .3rem;
}

.card .sub-title {
    font-size: .8rem;
}
/* FOOTER */
.footer {
    display: flex;
    align-items: center;
    width: 100%;
    height: 80px;
    padding: 0 1rem;
    background-color: #282828;
    color: white;
}

.footer .col{
    display: flex;
    align-items: center;
    height: 60%;
}

.footer .col.left .img-container {
    height: 100%;
    margin-right: .8rem;
}

.footer .col.left img {
    height: 100%;
}

.footer .col.left .title {
    font-size: .6rem;
    font-weight: 700;
    margin-right: 2rem;
}

.footer .col.left .title span,
.footer .col.left .icons-container {
    color: #a3a3a3;
}

.footer .col.left .title span:hover {
    text-decoration: underline;
    cursor: pointer;
}

.footer .col.left .icons-container li {
    display: inline-block;
    margin-right: .5rem;
}

.footer .col.left .icons-container i:hover {
    color: white;
}

.footer .col-center {
    text-align: center;
    flex-grow: 1;
}

.footer .col-center .icons-container {
    margin-bottom: .5rem;
}

.footer .col-center .icons-container i {
    margin-right: 1rem;
    vertical-align: middle;
}

.footer .col-center .icons-container i.play {
    font-size: 2rem;
}

.footer .bar {
    position: relative;
    display: inline-block;
    width: 30vw;
    height: 5px;
    border: 1px solid gray;
    vertical-align: middle;
    background-color: gray;
    border-radius: 10px;
}

.footer .bar::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 30%;
    height: 100%;
    background-color: white;
    border-radius: 10px;
}

.footer .bar .point {
    display: none;
    position: absolute;
    top: -5px;
    left: 28%;
    height: 15px;
    width: 15px;
    border-radius: 50%;
    background-color: white;
}

.footer .bar:hover.bar::before {
    background-color: greenyellow;
}

.footer .bar:hover .point {
    display: inline-block;
    cursor: pointer;
}

.footer .bar-container span {
    font-size: .7rem;
}

.footer .col.right .bar {
    width: 80px;
}

.footer .col.right .icons-container {
    font-size: .7rem;
}

.footer .col.right .icons-container i {
    margin-right: .7rem;
}

.footer .col-center .icons-container,
.footer .col.right .icons-container {
    transition: all .1s linear;
}

.footer .col-center .icons-container i:hover,
.footer .col.right .icons-container i:hover {
    filter: drop-shadow(0 0 10px white);
}

.footer .col-center .icons-container i.play:hover {
    transform: scale(1.2);
}

.small-icon {
    display: none;
}

@media screen and (max-width: 1100px) and (min-width: 701px) {
    .cards-container .menu ul li {
        font-size: .7rem;
    }

    .cards-container .menu ul li:last-child {
        display: block;
        margin-top: .5rem;
    }
    
    .cards-container .row {
        display: flex;
        flex-wrap: wrap;
    }

    .cards-container .card {
        width: 15.5vw;
        margin-right: .3rem;
        margin-bottom: 2rem;
    }

    .card .img-container {
        height: 15.5vw;
    }

    .card .img-container .overlay {
        line-height: 15.5vw;
    }

    .footer .col.left .title {
        margin-right: 1rem;
    }
}

@media screen and (max-width: 700px) and (min-width: 601px) {
    .main-content .cards-container .menu {
        display: flex;
        flex-wrap: wrap;
        width: 80%;
        margin: 0 auto;
    }

    .main-content .cards-container .menu ul li:first-child,
    .main-content .cards-container .menu ul li:nth-child(2),
    .main-content .cards-container .menu ul li:nth-child(3) {
        margin-bottom: 2rem;
    }

    .cards-container .row {
        display: flex;
        flex-wrap: wrap;
    }

    .cards-container .card {
        width: 28vw;
        margin-bottom: 2rem;
    }

    .card .img-container {
        height: 28vw;
    }

    .card .img-container .overlay {
        line-height: 28vw;
    }

    .footer .col.left .icons-container li {
        display: block;
    }

    .footer .bar {
        width: 20vw;
    }

    .footer .col-center .icons-container {
        padding-left: 1rem;
    }
}

@media screen and (max-width: 600px) {
    .small-icon {
        display: inline-block;
        width: 40px;
    }

    .sidebar {
        width: 50px;
    }

    .sidebar a:not(.small-icon) {
        display: none;
    }

    .sidebar ul:first-child li:not(.logo-container) img {
        width: 40px;
    }

    .sidebar .menu-list img {
        width: auto;
    }
    
    .sidebar .playlist {
        display: none;
    }

    .sidebar .menu-footer {
        height: auto;   
    }

    .menu-footer .account a img {
        width: 35px;
        height: 35px;
    }

    .menu-footer .account span {
        display: none;
    }

    .main .main-content,
    .main .main-header {
        width: calc(100% - 50px);
    }

    .main .main-header {
        left: 50px;
    }

    .main-content .cards-container .menu {
        display: flex;
        flex-wrap: wrap;
        width: 100%;
    }

    .main-content .cards-container .menu ul li:first-child,
    .main-content .cards-container .menu ul li:nth-child(2),
    .main-content .cards-container .menu ul li:nth-child(3) {
        margin-bottom: 2rem;
    }

    .cards-container .row {
        display: flex;
        flex-wrap: wrap;
    }

    .cards-container .card {
        width: 200px;
        margin-bottom: 2rem;
    }

    .card .img-container {
        height: 200px;
    }

    .card .img-container .overlay {
        line-height: 200px;
    }

    .footer {
        padding: 0 .3rem;
    }

    .footer .col.left .img-container {
        margin-right: .3rem;
    }

    .footer .col.left .title {
        width: 30%;
        margin-right: .7rem;
    }

    .footer .col.left .icons-container li {
        display: block;
    }

    .footer .bar {
        width: 20vw;
    }

    .footer .col-center .icons-container {
        padding-left: 1rem;
    }

    .footer .col.right .icons-container i {
        margin-right: .4rem;
    }

    .footer .col.right .bar {
        width: 60px;
    }
}

